--- a/contact-us.html
+++ b/contact-us.html
@@ -15,12 +15,10 @@
   <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css">
   <!--===============================Font families end================================-->
   <link rel="stylesheet" href="./asset/css/styles.css">
-  <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css">
+  <!-- <link rel="stylesheet" href="./asset/css/owl.carousel.min.css"> -->
+  <!-- <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css"> -->
   <!-- Icon Fonts -->
-  <link rel="stylesheet" href="./asset/fonts/icomoon/style.css">
   <!-- Flaticon Css -->
-  <link rel="stylesheet" href="./asset/fonts/flaticon.css">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <!-- Font Awesome CDN -->
@@ -33,7 +31,6 @@
   <!--===================Aos animation=======================-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--===================Aos animation=======================-->
-  <script src="./asset/js/index.js" defer></script>
 </head>
 
   <body>
@@ -45,7 +42,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">HOME</a></li>
-          <li><a href="./aboutus.html">ABOUT US</a></li>
+          <li><a href="./about.html">ABOUT US</a></li>
           <li><a href="./news.html">NEWS</a></li>
           <li><a href="./donate.html">DONATE</a></li>
           <li><a href="./contact-us.html">CONTACT US</a></li>
@@ -62,10 +59,10 @@
       <div class="nav-mobile-container">
         <ul>
           <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="#">NEWS</a></li>
-          <li><a href="#">DONATE</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <li><a href="./aboutus.html">ABOUT US</a></li>
+          <li><a href="./news.html">NEWS</a></li>
+          <li><a href="./donate.html">DONATE</a></li>
+          <li><a href="./contact-us.html">CONTACT US</a></li>
         </ul>
       </div>
     </div>
@@ -135,7 +132,7 @@
             <span class="border-shape"></span>
             <div class="bottom_content pt-2">
               <section class="text-center">
-                <img src="./asset/images/p1.png">
+                <img src="./asset/images/P1.png">
               </section>
               <section class="text-center soical-i py-3">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -166,13 +163,13 @@
             </div>
     </footer>
   </body>
-  <!--  Optional JavaScript -->
-    <script src="./asset/js/jquery-3.6.1.min.js"></script>
-    <!-- Bootstrap Bundle Js -->
-    <script src="./asset/js/bootstrap.bundle.min.js"></script>
-    <!-- carousel Js-->
-    <script src="./asset/js/owl.carousel.min.js"></script>
-    <!-- Custom Js -->
-    <script src="./asset/js/index.js"></script>
-    <script src="./asset/js/main.js"></script>
+<!--  Optional JavaScript -->
+<script src="./asset/js/jquery-3.6.1.min.js"></script>
+<!-- Bootstrap Bundle Js -->
+<script src="./asset/js/bootstrap.bundle.min.js.map"></script>
+<!-- carousel Js-->
+<script src="./asset/js/owl.carousel.min.js"></script>
+<!-- Custom Js -->
+<script src="./asset/js/index.js"></script>
+<script src="./asset/js/main.js"></script>
 </html>
