--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css">
   <!--===============================Font families end================================-->
   <link rel="stylesheet" href="./asset/css/styles.css">
-  <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css">
+  <!-- <link rel="stylesheet" href="./asset/css/owl.carousel.min.css"> -->
+  <!-- <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css"> -->
   <!-- Icon Fonts -->
-  <link rel="stylesheet" href="./asset/fonts/icomoon/style.css">
   <!-- Flaticon Css -->
-  <link rel="stylesheet" href="./asset/fonts/flaticon.css">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <!-- Font Awesome CDN -->
@@ -33,7 +31,6 @@
   <!--===================Aos animation=======================-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--===================Aos animation=======================-->
-  <script src="./asset/js/index.js" defer></script>
 </head>
 
 <body>
@@ -45,7 +42,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">HOME</a></li>
-        <li><a href="./aboutus.html">ABOUT US</a></li>
+        <li><a href="./about.html">ABOUT US</a></li>
         <li><a href="./news.html">NEWS</a></li>
         <li><a href="./donate.html">DONATE</a></li>
         <li><a href="./contact-us.html">CONTACT US</a></li>
@@ -175,7 +172,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-left">
               <div class="card-committees" >
                 <div class="card-img">
-                  <img src="./asset/images/s1.jpg">
+                  <img src="./asset/images/S1.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -191,7 +188,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-left">
               <div class="card-committees">
                 <div class="card-img">
-                  <img src="./asset/images/s2.jpg">
+                  <img src="./asset/images/S2.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -205,7 +202,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-left">
               <div class="card-committees">
                 <div class="card-img">
-                  <img src="./asset/images/s3.jpg">
+                  <img src="./asset/images/S3.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -221,7 +218,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-right">
               <div class="card-committees">
                 <div class="card-img">
-                  <img src="./asset/images/s4.jpg">
+                  <img src="./asset/images/S4.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -235,7 +232,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-right">
               <div class="card-committees">
                 <div class="card-img">
-                  <img src="./asset/images/s5.jpg">
+                  <img src="./asset/images/S5.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -251,7 +248,7 @@
             <div class="col-md-6 col-lg-4 col-sm-6 col-12" data-aos="fade-right">
               <div class="card-committees">
                 <div class="card-img">
-                  <img src="./asset/images/s1.jpg">
+                  <img src="./asset/images/S1.jpg">
                 </div>
                 <div class="card-body">
                   <h4>Chairman's Committee </h4>
@@ -316,7 +313,7 @@
     <span class="border-shape"></span>
     <div class="bottom_content pt-2">
       <section class="text-center">
-        <img src="./asset/images/p1.png">
+        <img src="./asset/images/P1.png">
       </section>
       <section class="text-center soical-i py-3">
         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -349,7 +346,7 @@
 </body>
 <script src="./asset/js/jquery-3.6.1.min.js"></script>
 <!-- Bootstrap Bundle Js -->
-<script src="./asset/js/bootstrap.bundle.min.js"></script>
+<script src="./asset/js/bootstrap.bundle.min.js.map"></script>
 <!-- carousel Js-->
 <script src="./asset/js/owl.carousel.min.js"></script>
 <!--==============Aos animation================-->
@@ -358,6 +355,6 @@
   AOS.init();
 </script>
 <!--==============Aos animation================-->
-<script src="./index.js"></script>
+<script src="./asset/js/index.js"></script>
 
 </html>
