--- a/news.html
+++ b/news.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Required meta tags -->
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="asset/images/favicon.png">
-    <!-- Owl Carousel -->
-    <link rel="stylesheet" href="asset/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="asset/css/owl.theme.default.min.css">
+    <title>MK Movement</title>
+    <!--===========================Bootstrap Css cdn==============================-->
+    <!--===========================Bootstrap Cdns==============================-->
+    <!--===============================Font families start================================-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&family=Oswald:wght@200&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css">
+    <!--===============================Font families end================================-->
+    <link rel="stylesheet" href="./asset/css/styles.css">
+    <!-- <link rel="stylesheet" href="./asset/css/owl.carousel.min.css"> -->
+    <!-- <link rel="stylesheet" href="./asset/css/owl.theme.default.min.css"> -->
     <!-- Icon Fonts -->
-    <link rel="stylesheet" href="asset/fonts/icomoon/style.css">
     <!-- Flaticon Css -->
-    <link rel="stylesheet" href="asset/fonts/flaticon.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="asset/css/styles.css">
-    <link rel="stylesheet" href="asset/css/responsive.css">
-    <link href="https://fonts.cdnfonts.com/css/burowai" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css">
-    <title>MK MOVEMENT</title>
-</head>
+    <link rel="stylesheet" href="./asset/css/bootstrap.min.css">
+    <!---==========Animate=============-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+     <!---==========Animate=============-->
+    <!--===================Aos animation=======================-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--===================Aos animation=======================-->
+  </head>
   <body>
     <nav>
       <div class="navbar">
@@ -37,7 +40,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="#">HOME</a></li>
-          <li><a href="./aboutus.html">ABOUT US</a></li>
+          <li><a href="./about.html">ABOUT US</a></li>
           <li><a href="./news.html">NEWS</a></li>
           <li><a href="./donate.html">DONATE</a></li>
           <li><a href="./contact-us.html">CONTACT US</a></li>
@@ -54,10 +57,10 @@
       <div class="nav-mobile-container">
         <ul>
           <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="#">NEWS</a></li>
-          <li><a href="#">DONATE</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <li><a href="./aboutus.html">ABOUT US</a></li>
+          <li><a href="./news.html">NEWS</a></li>
+          <li><a href="./donate.html">DONATE</a></li>
+          <li><a href="./contact-us.html">CONTACT US</a></li>
         </ul>
       </div>
     </div>
@@ -79,7 +82,7 @@
           <div class="row">
           <div class="col-md-6 col-md-6 col-sm-12 col-12">
             <div class="news-img">
-              <img src="asset/images/S2.jpg">
+              <img src="./asset/images/S2.jpg">
             </div>
           </div>
           <div class="col-md-6 col-md-6 col-sm-12 col-12">
@@ -96,7 +99,7 @@
           <div class="row">
           <div class="col-md-6 col-md-6 col-sm-12 col-12">
             <div class="news-img">
-              <img src="asset/images/S3.jpg">
+              <img src="./asset/images/S3.jpg">
             </div>
           </div>
           <div class="col-md-6 col-md-6 col-sm-12 col-12">
@@ -116,7 +119,7 @@
             <span class="border-shape"></span>
             <div class="bottom_content pt-2">
               <section class="text-center">
-                <img src="asset/images/p1.png">
+                <img src="./asset/images/P1.png">
               </section>
               <section class="text-center soical-i py-3">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -148,13 +151,12 @@
     </footer>
   </body>
   <!--  Optional JavaScript -->
-    <script src="asset/js/jquery-3.6.1.min.js"></script>
-    <!-- Bootstrap Bundle Js -->
-    <script src="asset/js/bootstrap.bundle.min.js"></script>
-    <!-- carousel Js-->
-    <script src="asset/js/owl.carousel.min.js"></script>
-    <!-- Custom Js -->
-    <script src="asset/js/index.js"></script>
-    <script src="asset/js/main.js"></script>
-    <script type="text/javascript"></script>
+  <script src="./asset/js/jquery-3.6.1.min.js"></script>
+  <!-- Bootstrap Bundle Js -->
+  <script src="./asset/js/bootstrap.bundle.min.js.map"></script>
+  <!-- carousel Js-->
+  <script src="./asset/js/owl.carousel.min.js"></script>
+  <!-- Custom Js -->
+  <script src="./asset/js/index.js"></script>
+  <script src="./asset/js/main.js"></script>
 </html>
