--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="./index.html">HOME</a></li>
-          <li><a href="./about.html">ABOUT US</a></li>
+          <li><a href="./aboutus.html">ABOUT US</a></li>
           <li><a href="./news.html">NEWS</a></li>
           <li><a href="./donate.html">DONATE</a></li>
           <li><a href="./contact-us.html">CONTACT US</a></li>
@@ -139,12 +139,12 @@
     </footer>
   </body>
   <!--  Optional JavaScript -->
-    <script src="./asset/js/jquery-3.6.1.min.js"></script>
-    <!-- Bootstrap Bundle Js -->
-    <script src="./asset/js/bootstrap.bundle.min.js.map"></script>
-    <!-- carousel Js-->
-    <script src="./asset/js/owl.carousel.min.js"></script>
-    <!-- Custom Js -->
-    <script src="./asset/js/index.js"></script>
-    <script src="./asset/js/main.js"></script>
+  <script src="./asset/js/jquery-3.6.1.min.js"></script>
+  <!-- Bootstrap Bundle Js -->
+  <script src="./asset/js/bootstrap.bundle.min.js.map"></script>
+  <!-- carousel Js-->
+  <script src="./asset/js/owl.carousel.min.js"></script>
+  <!-- Custom Js -->
+  <script src="./asset/js/index.js"></script>
+  <script src="./asset/js/main.js"></script>
 </html>
