--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">HOME</a></li>
-        <li><a href="./about.html">ABOUT US</a></li>
+        <li><a href="./aboutus.html">ABOUT US</a></li>
         <li><a href="./news.html">NEWS</a></li>
         <li><a href="./donate.html">DONATE</a></li>
         <li><a href="./contact-us.html">CONTACT US</a></li>
