--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./asset/images/mk-logo-1.png" alt="">
       </div>
       <ul class="nav-links">
-        <li><a href="#">HOME</a></li>
+        <li><a href="./index.html">HOME</a></li>
         <li><a href="./aboutus.html">ABOUT US</a></li>
         <li><a href="./news.html">NEWS</a></li>
         <li><a href="./donate.html">DONATE</a></li>
