--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
     <div class="nav-mobile-container-div">
       <div class="nav-mobile-container">
         <ul>
-          <li><a href="#">HOME</a></li>
+          <li><a href="./index.html">HOME</a></li>
           <li><a href="./aboutus.html">ABOUT US</a></li>
           <li><a href="./news.html">NEWS</a></li>
           <li><a href="./donate.html">DONATE</a></li>
